# multivector-rag

./: .gitignore  README.md  ideamd  main.py  pyproject.toml
colbert-env/: pyproject.toml
colpali-env/: pyproject.toml
docs/: project-structure.md  real-colbert-muvera.md
experiments/local/indexes/local_index/: plan.json
src/: __init__.py  main.py  main_colbert.py  main_colpali.py
src/api/: routes.py  text_routes.py  visual_routes.py
src/core/: config.py
src/graph/: state.py  workflow.py
src/ingest/: chunking.py  pdf.py
src/rerank/: colbert.py  colbert_reranker.py  colqwen.py  router.py
src/retrieval/: bm25.py  colbert_service.py  collection_export.py  dense.py  hybrid.py  muvera_encoder.py  muvera_proxy.py  muvera_store.py  quality.py  store.py
src/services/: answer_service.py  experimental_muvera_service.py  experimental_real_muvera_service.py  experimental_search_service.py  experimental_text_indexing.py  indexing.py  page_indexing.py  rerank_service.py  search_service.py  visual_indexing.py
tests/: test_answer_service.py  test_app_entrypoints.py  test_chunking.py  test_colbert_service.py  test_experimental_muvera_service.py  test_experimental_real_muvera_service.py  test_experimental_text_indexing.py  test_indexing_service.py  test_rerank_service.py  test_retrieval_quality.py  test_router.py  test_search_service.py
