[project]
name = "multivector-rag-colbert"
version = "0.1.0"
description = "ColBERT text retrieval environment"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "colbert-ai",
    "faiss-cpu",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "lancedb>=0.29.2",
    "langchain>=1.2.12",
    "langgraph>=1.1.2",
    "numpy<2",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.2",
    "pymupdf4llm>=1.27.2.1",
    "pytest>=9.0.2",
    "python-multipart>=0.0.22",
    "rank-bm25>=0.2.2",
    "scipy>=1.13,<1.17",
    "sentence-transformers>=3,<4",
    "setuptools>=70",
    "tantivy>=0.25.1",
    "torch>=2.4,<3",
    "transformers==4.49.0",
    "uvicorn>=0.41.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
